# hw0

./: .gitignore  .travis.yml  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  README.md  annotated.html  classcontroller-members.html  classcontroller.html  classcontroller__coll__graph.map  classcontroller__coll__graph.md5  classcontroller_a9006ef7b583b3fb94f09b1b0943f6865_cgraph.map  classcontroller_a9006ef7b583b3fb94f09b1b0943f6865_cgraph.md5  classdocument-members.html  classdocument.html  classdocument__coll__graph.md5  classdocument_a10f1849547395423392212f6249ccc81_cgraph.map  classdocument_a10f1849547395423392212f6249ccc81_cgraph.md5  classes.html  controller_8h.html  controller_8h__dep__incl.map  controller_8h__dep__incl.md5  controller_8h__incl.map  controller_8h__incl.md5  controller_8h_source.html  dir_000001_000000.html  dir_000004_000003.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_2f24e9380c1fd530bd56386fa62ed242.html  dir_2f24e9380c1fd530bd56386fa62ed242_dep.map  dir_2f24e9380c1fd530bd56386fa62ed242_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ede7b55ad41796b39c3ce85780335891.html  dir_ede7b55ad41796b39c3ce85780335891_dep.map  dir_ede7b55ad41796b39c3ce85780335891_dep.md5  document_8h.html  document_8h__dep__incl.map  document_8h__dep__incl.md5  document_8h__incl.map  document_8h__incl.md5  (+146 more)
data/: stars_class.txt
doc/: doxyfile.in  gh-pages.sh
gnuplot/: gp2  gp3  kvis.in
html/: annotated.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_2f24e9380c1fd530bd56386fa62ed242.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ede7b55ad41796b39c3ce85780335891.html  files.html  hierarchy.html  index.html  print__container_8h_source.html  print__ip_8h_source.html  print__ord_8h_source.html  print__tuple_8h_source.html  structimpl_1_1check__tuple-members.html  structimpl_1_1check__tuple.html  structimpl_1_1check__tuple__fields-members.html  structimpl_1_1check__tuple__fields.html  structimpl_1_1check__tuple__fields_3_01T_00_011_01_4-members.html  structimpl_1_1check__tuple__fields_3_01T_00_011_01_4.html  structimpl_1_1has__begin.html  structimpl_1_1has__begin_3_01T_00_01void__t_3_01decltype_07_6T_1_1cbegin_08_4_01_4.html  structimpl_1_1has__end.html  structimpl_1_1has__end_3_01T_00_01void__t_3_01decltype_07_6T_1_1cend_08_4_01_4.html  structimpl_1_1is__container-members.html  structimpl_1_1is__container.html  structimpl_1_1print__container-members.html  structimpl_1_1print__container.html  structimpl_1_1print__ord-members.html  structimpl_1_1print__ord.html  structimpl_1_1print__ord_3_01T_00_01SZ_00_01false_01_4-members.html  structimpl_1_1print__ord_3_01T_00_01SZ_00_01false_01_4.html  structimpl_1_1print__ord_3_01T_00_01SZ_00_01true_01_4-members.html  structimpl_1_1print__ord_3_01T_00_01SZ_00_01true_01_4.html  structimpl_1_1print__ord_3_01bool_00_011_00_01false_01_4-members.html  structimpl_1_1print__ord_3_01bool_00_011_00_01false_01_4.html  structimpl_1_1print__ord_3_01uint8__t_00_011_00_01true_01_4-members.html  structimpl_1_1print__ord_3_01uint8__t_00_011_00_01true_01_4.html  structimpl_1_1print__tuple-members.html  structimpl_1_1print__tuple.html  (+2 more)
html/search/: all_0.js  classes_3.js  search.js
include/: app_config.h  app_mode.h  async_config.h  block_builder.h  block_listener.h  block_shared.h  block_stats.h  build_state.h  build_strategy.h  chunk_parser.h  command.h  command_block.h  command_factory.h  command_printer.h  composite.h  controller.h  database.h  dbexception.h  dbops.h  document.h  dummyc.h  evil_queue.h  index_proxy.h  input_handler.h  ip_filter.h  ip_read.h  ip_tools.h  kfunc.h  ktypes.h  lock_manager.h  logname_generator.h  map_alloc.h  mapper.h  mapping.h  matrix.h  matrix_iterator.h  operation.h  otus0.h.in  point.h  print_container.h  (+15 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_2.js  classes_3.js  classes_5.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  search.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: app.cpp  app_config.cpp  app_mode.cpp  async.cpp  async_cli.cpp  async_config.cpp  block_builder.cpp  block_listener.cpp  build_state.cpp  bulk.cpp  bulk_server.cpp  chunk_parser.cpp  command.cpp  command_block.cpp  command_printer.cpp  database.cpp  dbexception.cpp  dbops.cpp  editor.cpp  evil_queue.cpp  input_handler.cpp  insert.cpp  ip_filter.cpp  ip_printer.cpp  join_server.cpp  jointst.cpp  kfunc.cpp  kgen.cpp  kkmeans.cpp  lock_manager.cpp  logname_generator.cpp  mapper.cpp  mapping.cpp  matrix.cpp  otus0.cpp  p1196.cpp  p1496.cpp  p1545.cpp  p1837.cpp  reduce.cpp  (+8 more)
tests/: 00-output.sh  01-version.sh  maketest.sh  maketests.sh  maketests_stats.sh  test_version.cpp
tests/data/: 0_cmd.txt  0_output.txt  1_cmd.txt  1_output.txt  2_cmd.txt  2_output.txt  3_output.txt  4_input.txt  4_output.txt  5_input.txt  5_output.txt  6_input.txt  6_output.txt  7_output_0.txt  7_output_1.txt  8_input.txt  8_output.txt  9_input.txt  9_output_0.txt  9_output_1.txt  input.txt
tests/src/: jointst.cpp  tests.cpp
